WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203099
Notification should not prevent entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=203099
Summary
Notification should not prevent entering the back/forward cache
Chris Dumez
Reported
2019-10-17 09:53:56 PDT
Notification should not prevent entering the back/forward cache.
Attachments
Patch
(16.67 KB, patch)
2019-10-23 16:20 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.67 KB, patch)
2019-10-23 16:21 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-23 15:30:19 PDT
<
rdar://problem/56557479
>
Chris Dumez
Comment 2
2019-10-23 16:20:00 PDT
Created
attachment 381750
[details]
Patch
Chris Dumez
Comment 3
2019-10-23 16:21:43 PDT
Created
attachment 381751
[details]
Patch
Geoffrey Garen
Comment 4
2019-10-23 20:11:07 PDT
Comment on
attachment 381751
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-10-23 21:01:37 PDT
Comment on
attachment 381751
[details]
Patch Clearing flags on attachment: 381751 Committed
r251528
: <
https://trac.webkit.org/changeset/251528
>
WebKit Commit Bot
Comment 6
2019-10-23 21:01:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug