Notification should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203099 <rdar://problem/56557479>

Reviewed by Geoffrey Garen.

Source/WebCore:

Notifications currently displayed were preventing a page from entering the back/forward cache.
Instead, we now make sure to close any visible notification upon suspension. Since closing
a notification will fire events, we also schedule tasks on the window event loop to fire those
events, instead of firing these events synchronously. The Window event loop takes care of delaying
those events if the document is suspended.

Test: fast/history/page-cache-notification-showing.html

* Modules/notifications/Notification.cpp:
(WebCore::Notification::Notification):
(WebCore::Notification::show):
(WebCore::Notification::close):
(WebCore::Notification::document const):
(WebCore::Notification::activeDOMObjectName const):
(WebCore::Notification::stop):
(WebCore::Notification::suspend):
(WebCore::Notification::queueTask):
(WebCore::Notification::dispatchShowEvent):
(WebCore::Notification::dispatchClickEvent):
(WebCore::Notification::dispatchCloseEvent):
(WebCore::Notification::dispatchErrorEvent):
* Modules/notifications/Notification.h:
* dom/AbstractEventLoop.h:

LayoutTests:

Add layout test coverage.

* fast/history/page-cache-notification-non-suspendable-expected.txt: Removed.
* fast/history/page-cache-notification-non-suspendable.html: Removed.
* fast/history/page-cache-notification-showing-expected.txt: Added.
* fast/history/page-cache-notification-showing.html: Added.


Canonical link: https://commits.webkit.org/216761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251528 268f45cc-cd09-0410-ab3c-d52691b4dbfc