Source/WebCore/Modules/notifications/Notification.cpp
@@ -41,6 +41,7 @@
 #include "NotificationClient.h"
 #include "NotificationController.h"
 #include "NotificationPermissionCallback.h"
+#include "WindowEventLoop.h"
 #include "WindowFocusAllowedIndicator.h"
 #include <wtf/IsoMallocInlines.h>
 
@@ -63,7 +64,7 @@ Notification::Notification(Document& document, const String& title, const Option
     , m_body(options.body)
     , m_tag(options.tag)
     , m_state(Idle)
-    , m_taskTimer(makeUnique<Timer>([this] () { show(); }))
+    , m_showNotificationTimer(&document, *this, &Notification::show)
 {
     if (!options.icon.isEmpty()) {
         auto iconURL = document.completeURL(options.icon);
@@ -71,7 +72,8 @@ Notification::Notification(Document& document, const String& title, const Option
             m_icon = iconURL;
     }
 
-    m_taskTimer->startOneShot(0_s);
+    m_showNotificationTimer.startOneShot(0_s);
+    m_showNotificationTimer.suspendIfNeeded();
 }
 
 Notification::~Notification() = default;
@@ -82,7 +84,7 @@ void Notification::show()
     if (m_state != Idle)
         return;
 
-    auto* page = downcast<Document>(*scriptExecutionContext()).page();
+    auto* page = document()->page();
     if (!page)
         return;
 
@@ -104,8 +106,7 @@ void Notification::close()
     case Idle:
         break;
     case Showing: {
-        auto* page = downcast<Document>(*scriptExecutionContext()).page();
-        if (page)
+        if (auto* page = document()->page())
             NotificationController::from(page)->client().cancel(this);
         break;
     }
@@ -114,24 +115,27 @@ void Notification::close()
     }
 }
 
+Document* Notification::document() const
+{
+    return downcast<Document>(scriptExecutionContext());
+}
+
 const char* Notification::activeDOMObjectName() const
 {
     return "Notification";
-}
-
-// FIXME: This should never prevent entering the back/forward cache.
-bool Notification::shouldPreventEnteringBackForwardCache_DEPRECATED() const
-{
-    return m_state != Idle && m_state != Closed;
 }
 
 void Notification::stop()
 {
     ActiveDOMObject::stop();
 
-    auto* page = downcast<Document>(*scriptExecutionContext()).page();
-    if (page)
+    if (auto* page = document()->page())
         NotificationController::from(page)->client().notificationObjectDestroyed(this);
+}
+
+void Notification::suspend(ReasonForSuspension)
+{
+    close();
 }
 
 void Notification::finalize()
@@ -142,26 +146,43 @@ void Notification::finalize()
     unsetPendingActivity(*this);
 }
 
+void Notification::queueTask(Function<void()>&& task)
+{
+    auto* document = this->document();
+    if (!document)
+        return;
+
+    document->eventLoop().queueTask(TaskSource::UserInteraction, *document, WTFMove(task));
+}
+
 void Notification::dispatchShowEvent()
 {
-    dispatchEvent(Event::create(eventNames().showEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    queueTask([this, pendingActivity = makePendingActivity(*this)] {
+        dispatchEvent(Event::create(eventNames().showEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    });
 }
 
 void Notification::dispatchClickEvent()
 {
-    WindowFocusAllowedIndicator windowFocusAllowed;
-    dispatchEvent(Event::create(eventNames().clickEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    queueTask([this, pendingActivity = makePendingActivity(*this)] {
+        WindowFocusAllowedIndicator windowFocusAllowed;
+        dispatchEvent(Event::create(eventNames().clickEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    });
 }
 
 void Notification::dispatchCloseEvent()
 {
-    dispatchEvent(Event::create(eventNames().closeEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    queueTask([this, pendingActivity = makePendingActivity(*this)] {
+        dispatchEvent(Event::create(eventNames().closeEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    });
     finalize();
 }
 
 void Notification::dispatchErrorEvent()
 {
-    dispatchEvent(Event::create(eventNames().errorEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    queueTask([this, pendingActivity = makePendingActivity(*this)] {
+        dispatchEvent(Event::create(eventNames().errorEvent, Event::CanBubble::No, Event::IsCancelable::No));
+    });
 }
 
 auto Notification::permission(Document& document) -> Permission
