Source/WebCore/dom/AbstractEventLoop.h
@@ -35,6 +35,7 @@ class ScriptExecutionContext;
 enum class TaskSource : uint8_t {
     IdleTask,
     Networking,
+    UserInteraction
 };
 
 // https://html.spec.whatwg.org/multipage/webappapis.html#event-loop
